# mmcif-metadata-import

./: .gitignore  CHANGELOG.md  LICENSE  README.md  import_metadata.py  metadata_import.ipynb  polymer_safeguards.py  pyproject.toml  requirements-notebook.txt  requirements.txt
.github/workflows/: pypi-publish.yml
docs/: index.html  macromolecule-safeguards.md  user-tutorial.html
specs/: AUTHORS.csv  AUTHORS_DEFAULT.csv  AUTHORS_EM_MAP_ONLY.csv  AUTHORS_EM_WITH_ATOM_SITE.csv  CITATION.csv  EM.csv  FUNDING.csv  KEYWORDS.csv  MACROMOLECULES.csv  MACROMOLECULES_EM.csv  NMR.csv  XRAY.csv  XRAY_SERIAL.csv
tests/: test_merge_category_skip.py  test_polymer_safeguards.py
web_app/: README.md  app.py  requirements.txt
web_app/templates/: index.html
